--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^17.0.2",
     "react-player": "^2.9.0",
     "react-redux": "^7.2.4",
+    "react-rounded-image": "^2.0.13",
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
     "redux-saga": "^1.1.3",
