--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-player": "^2.9.0",
     "react-redux": "^7.2.4",
     "react-rounded-image": "^2.0.13",
+    "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
