--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "connected-react-router": "^6.9.1",
     "formik": "^2.2.9",
     "formik-material-fields": "^0.0.6",
     "formik-material-ui": "^3.0.1",
@@ -25,6 +26,7 @@
     "react-rounded-image": "^2.0.13",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
+    "react-router-redux": "^4.0.8",
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
     "redux-saga": "^1.1.3",
