--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "formik": "^2.2.9",
     "formik-material-fields": "^0.0.6",
     "formik-material-ui": "^3.0.1",
+    "lodash": "^4.17.21",
     "node-sass": "^6.0.1",
     "notistack": "^1.0.10",
     "prop-types": "^15.7.2",
